Fix CI (Pull request action)

--- a/.github/workflows/cheat-client-hashes.yml
+++ b/.github/workflows/cheat-client-hashes.yml
@@ -18,11 +18,10 @@ jobs:
       run: python hashlist.py
 
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v6
+      uses: peter-evans/create-pull-request@v7
       with:
-        commit-message: "[CI] Update cheat client hash list"
-        committer: github-actions[bot]@users.noreply.github.com
         author: github-actions[bot]@users.noreply.github.com
-        branch: cheat-client-hashes
-        delete-branch: true
+        commit-message: "[CI] Update cheat client hash list"
         title: "[CI] Update cheat client hash list"
+        branch: cheat-client-hashes
+        base: master
